# GrowStreams_Backend

./: .gitignore  CANTON_DEMO_VIDEO_SCRIPT.md  CANTON_VERIFICATION_GUIDE.md  CLEANUP_SUMMARY.md  COMPLETE_CANTON_PROOF.md  DEMO_SCRIPT.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  GITHUB_DESCRIPTION.md  GROWSTREAMS_CANTON_OVERVIEW.md  GROWSTREAMS_SIMPLE_OVERVIEW.md  HOW_TO_PROVE_CANTON_DEPLOYMENT.md  JSON_API_INTEGRATION_GUIDE.md  NAVIGATOR_FIX_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_STATUS_REPORT.md  PLAN.md  PROPOSAL_ALIGNMENT_ANALYSIS.md  QUICK_START_CANTON_PROOF.md  README.md  SETUP_CANTON_FRONTEND.md  SIMPLE_SUMMARY_FOR_OTHERS.md  VALIDATION_TEST.md  deploy-state.json  nixpacks.toml  package-lock.json  package.json  railway.json  user_flow.md
api/: deploy-state.json  package-lock.json  package.json  railway.json  test-api.mjs
canton-frontend/: README.md  env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
contracts/: Cargo.toml
contracts/adapters/bounty-adapter/: .binpath  Cargo.toml  bounty-adapter.idl
contracts/adapters/bounty-adapter/src/: lib.rs
contracts/grow-token/: .binpath  Cargo.toml  grow-token.idl
contracts/grow-token/src/: lib.rs
contracts/identity-registry/: .binpath  Cargo.toml  identity-registry.idl
contracts/identity-registry/src/: lib.rs
contracts/permission-manager/: .binpath  Cargo.toml  permission-manager.idl
contracts/permission-manager/src/: lib.rs
contracts/splits-router/: .binpath  Cargo.toml  splits-router.idl
contracts/splits-router/src/: lib.rs
contracts/stream-core/: .binpath  Cargo.toml  stream-core.idl
contracts/stream-core/src/: lib.rs
contracts/token-vault/: .binpath  Cargo.toml  token-vault.idl
contracts/token-vault/src/: lib.rs
daml-contracts/: CANTON_DEPLOYMENT_SUCCESS.md  CANTON_GINIE_STUDY_GUIDE.md  DEPLOYMENT_SUCCESS_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  WEEK1-2_CHECKLIST.md  WEEK1-2_COMPLETION_REPORT.md  WEEK3-4_COMPLETION_REPORT.md  WEEK5-7_COMPLETION_REPORT.md  WEEK8-9-10_COMPLETION_REPORT.md  WEEK8-9-10_DEPLOYMENT_GUIDE.md  canton-config.conf  create-demo-contracts.sh  daml.yaml  deploy-growstreams.canton  test-live-streaming.daml  ui-backend.conf
docs/: API.md  CAMPAIGN_GUIDE.md  CAMPAIGN_IMPLEMENTATION_PLAN.md  DEMO_VIDEO_SCRIPT.md  E2E_VALIDATION_LOG.md  E2E_VALIDATION_REPORT.md  GITHUB_AGENT.md  LANDING_PAGE_2MIN_DEMO_SCRIPT.md  LANDING_PAGE_DEMO_SCRIPT.md  LANDING_PAGE_WALKTHROUGH_SCRIPT.md  NATIVE_VARA_E2E_UPDATES.md  PLATFORM_DEMO_4MIN_SCRIPT.md  PLATFORM_DEMO_VIDEO_SCRIPT.md  README.md  contracts-api.md  sdk-quickstart.md
evidence/: README.md  contract-ids.txt  criterion-1-streaming-contract.md  criterion-2-accrual-formula.md  criterion-3-obligation-view.md  criterion-4-lifecycle-manager.md  criterion-5-testing.md  criterion-6-canton-deployment.md
frontend/: CAMPAIGN_README.md  README.md  RECLAIM_SETUP.md  TESTING-GUIDE.md  env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: build.sh  deploy.sh  init-contracts.sh
sdk/: package-lock.json  (+1 more)
(+231 files in other folders)
