[workspace]
members = [
    "stream-core",
    "token-vault",
]
resolver = "2"

[workspace.dependencies]
sails-rs = "0.6"
gstd = "1.6"
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
