[package]
name = "permission-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GrowStreams V2 — Delegate roles and app-level permissions for stream management"

[dependencies]
sails-rs = "0.6"
gstd = "1.6"
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[build-dependencies]
sails-rs = { version = "0.6", features = ["wasm-builder"] }

[lib]
crate-type = ["cdylib", "rlib"]
